@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.1469 2019/03/24 21:39:27 gutteridge Exp $
+$NetBSD: CHANGES-2019,v 1.1470 2019/03/25 01:52:02 jklos Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -2357,3 +2357,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Updated sysutils/u-boot-bananapi-r2 to 2019.04-rc4nb1 [thorpej 2019-03-24]
 	Added www/gitea version 1.7.4 [nia 2019-03-24]
 	Updated misc/xfce4-weather-plugin to 0.9.1 [gutteridge 2019-03-24]
+	Updated mail/mailman to 2.1.29 [jklos 2019-03-25]
